app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */

.icon {
	height: 100px;
	width: 100px;
}

.temperature {
	margin-left: 10px !important;
	margin-top: 20px !important;
}

.buffer {
	margin-top: 10px !important;
}

.button {
	height: 50px;
	width: 50px;
}

.buffer2 {
	margin-left: 100px !important;
	height: 379px;
	width: 298px;

}

.bold {
	font: bold;
}

.fahrenheit {
	margin-left: 100px !important
}

.comida {
	height: 333px;
	width: 620px;
}

